# hoppie-connector

./: .gitignore  LICENSE  README.md  _config.yml  index.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.devcontainer/: devcontainer.json  postCreate.sh
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml  unit-test.yml
src/hoppie_connector/: ADSC.py  API.py  CPDLC.py  Messages.py  Responses.py  Utilities.py  __init__.py
tests/: test_AdscContractCancellationMessage.py  test_AdscContractRejectionMessage.py  test_AdscContractRequestMessage.py  test_AdscMessage.py  test_AdscMessageParser.py  test_AdscPeriodicContractCancellationMessage.py  test_AdscPeriodicContractRequestMessage.py  test_AdscPeriodicReportMessage.py  test_BasicGroup.py  test_CpdlcMessage.py  test_CpdlcResponseRequirement.py  test_ErrorResponse.py  test_HoppieAPI.py  test_HoppieConnector.py  test_HoppieMessage.py  test_HoppieMessageFactory.py  test_HoppieMessageParser.py  test_HoppieResponse.py  test_HoppieResponseParser.py  test_HoppieResponseParserFactory.py  test_PeekMessage.py  test_PeekResponseParser.py  test_PeekSuccessResponse.py  test_PingMessage.py  test_PingResponseParser.py  test_PingSuccessResponse.py  test_PollMessage.py  test_PollResponseParser.py  test_PollSuccessResponse.py  test_ProgressMessage.py  test_SuccessResponse.py  test_TelexMessage.py  test_Utilities.py
