[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "hoppie-connector"
authors = [
    {name = "islandc_"},
]
description = "Python connector for Hoppie's ACARS service "
readme = "README.md"
requires-python = ">=3.12"
keywords = ["hoppie", "acars", "vatsim"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0"
]
dynamic = ["version"]

[project.optional-dependencies]
Test = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "responses>=0.25",
    "ruff>=0.3"
]

[project.urls]
Homepage = "https://islandcontroller.github.io/hoppie-connector/"
Repository = "https://github.com/islandcontroller/hoppie-connector.git"
Issues = "https://github.com/islandcontroller/hoppie-connector/issues/"
Documentation = "https://github.com/islandcontroller/hoppie-connector/wiki/"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=hoppie_connector --cov-branch --cov-report=xml --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["tests"]
